# LightRAG

./: .gitignore  AGENTS.md  claude.md  cli.py  env.example  pyproject.toml
api_doc/: retrieval.http
datasets/: domain_kg_enhanced.json  rag_domain.json  rag_domain.md  rag_domain_prompts.json
docs/: cli_improve.md  config_improve.md  global_config_implementation.md  global_query_analysis.md  hybrid_query_analysis.md  local_query_analysis.md  mix_query_analysis.md  query.md  query_flow.md  replace_lightrag_instance.md  retrieval_api.md
examples/: RAG_CONFIG_GUIDE.md  analyze_kg_structure.py  claude.md  cli_demo.py  convert_domain_kg.py  demo_custom_kg_import.py  env  example_custom_kg.json  import_domain_kg_demo.py  integration_config_example.json  lightrag_global_instance_example.py  paper_kg_README.md  paper_kg_config.py  paper_kg_example.py  paper_kg_prompts.py  pdf_reader.py  qwen_embedding_config.py  rag_pdf_README.md  rag_pdf_example.py  rag_pdf_processor.py  rag_pdf_processor_old.py  retrieval_example.py  retrieval_integration_example.py
lightrag/: base.py  claude.md  constants.py  lightrag.py  operate.py
lightrag/api/: .gitignore  API_DOCUMENTATION.md  README.md  config.py  lightrag_server.py
lightrag/api/routers/: retrieval_routes.py
lightrag/core/: __init__.py  config.py  instance_manager.py
lightrag/integrations/: __init__.py  base.py  config.py  context_parser.py  converters.py  deer_flow.py  manager.py  models.py
lightrag/llm/: qwen.py
lightrag_webui/src/stores/: settings.ts
todo/: task_01_done.md  task_01_review.md  task_02_done.md  task_02_plan.md  task_02_review.md  task_03_done.md  task_03_plan.md  task_03_process.md  task_03_req.md  task_03_review.md  task_04_done.md  task_04_plan.md  task_04_req.md  task_05_done.md  task_05_plan.md
