[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightrag-hku"
dynamic = ["version"]
authors = [
    {name = "Zirui Guo"}
]
description = "LightRAG: Simple and Fast Retrieval-Augmented Generation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp",
    "configparser",
    "dotenv",
    "fastapi>=0.116.1",
    "fastembed>=0.7.3",
    "future",
    "httpx>=0.28.1",
    "json_repair",
    "jwt>=1.4.0",
    "motor>=3.7.1",
    "nano-vectordb",
    "neo4j>=5.28.2",
    "networkx",
    "numpy",
    "openai>=1.102.0",
    "pandas>=2.0.0",
    "pdfplumber>=0.11.7",
    "pipmaster",
    "pydantic",
    "pymupdf>=1.26.4",
    "pypinyin",
    "python-dotenv",
    "qdrant-client>=1.15.1",
    "setuptools",
    "tenacity",
    "tiktoken",
    "typer>=0.17.4",
    "uvicorn>=0.35.0",
    "xlsxwriter>=3.1.0",
]

[project.optional-dependencies]
api = [
    # Core dependencies
    "aiohttp",
    "configparser",
    "dotenv",
    "future",
    "json_repair",
    "nano-vectordb",
    "networkx",
    "numpy",
    "openai",
    "pandas>=2.0.0",
    "pipmaster",
    "pydantic",
    "pypinyin",
    "python-dotenv",
    "setuptools",
    "tenacity",
    "tiktoken",
    "xlsxwriter>=3.1.0",
    # API-specific dependencies
    "aiofiles",
    "ascii_colors",
    "asyncpg",
    "distro",
    "fastapi",
    "httpcore",
    "httpx",
    "jiter",
    "passlib[bcrypt]",
    "psutil",
    "PyJWT",
    "python-jose[cryptography]",
    "python-multipart",
    "pytz",
    "uvicorn",
]

[project.scripts]
lightrag-server = "lightrag.api.lightrag_server:main"
lightrag-gunicorn = "lightrag.api.run_with_gunicorn:main"

[project.urls]
Homepage = "https://github.com/HKUDS/LightRAG"
Documentation = "https://github.com/HKUDS/LightRAG"
Repository = "https://github.com/HKUDS/LightRAG"
"Bug Tracker" = "https://github.com/HKUDS/LightRAG/issues"

[tool.setuptools.packages.find]
include = ["lightrag*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "lightrag.__version__"}

[tool.setuptools.package-data]
lightrag = ["api/webui/**/*"]

[tool.ruff]
target-version = "py310"
